samples/_failures_safe/1761666208_d1a53e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0e8a398.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_d0e8a398.c:144:5: error: expected expression at end of input
  144 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_d0e8a398.c:144:5: error: expected declaration or statement at end of input
